--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "mongoose": "^8.3.0"
+    "lodash": "^4.17.21",
+    "mongoose": "^8.3.0",
+    "openai": "3.2.1"
   }
 }
