--- a/package.json
+++ b/package.json
@@ -12,12 +12,8 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-,
     "mongoose": "^8.3.0",
-    "openai": "3.2.1"
-
-    "jsonwebtoken": "^9.0.2",
-  
-
+    "openai": "3.2.1",
+    "jsonwebtoken": "^9.0.2"
   }
 }
