--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.0",
-    "openai": "3.2.1",
-    "jsonwebtoken": "^9.0.2"
+    "nodemon": "^3.1.0",
+    "openai": "3.2.1"
   }
 }
